2007-10-09  Jens Granseuer  <jensgr@gmx.net>
       
        * appearance-desktop.c: (wp_props_wp_set): fix crash if we fail to
        convert a filename to UTF-8

2007-09-28  Jens Granseuer  <jensgr@gmx.net>
                   
        * appearance-themes.c: (theme_store_sort_func): make theme sorting
        case-insensitive (bug #481224)

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (main): add a comment for translators (bug #473379)

2007-09-16  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't set a fixed width for the toolbar button
	color label (bug #474317)

2007-09-09  Claude Paroz  <claude@2xlibre.net>

	* data/appearance.glade: Correct translatable property value of Save As.
	Fixes #473810.

2007-09-01  Jens Granseuer  <jensgr@gmx.net>

	* gedit-message-area.c: (gedit_message_area_init): sync with upstream

2007-09-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (font_render_load), (cb_show_details): break out
	of the loop asap; use _prepend instead of _append

2007-08-31  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (font_render_load), (setup_font_pair),
	(enum_group_load), (enum_group_create): don't define gconf_key as
	const and save a few casts

2007-08-31  Jens Granseuer  <jensgr@gmx.net>

	* appearance-font.c: (enum_group_destroy), (cb_show_details),
	(font_init), (font_shutdown):
	* appearance.h: don't leak the enum groups

2007-08-28  Gabor Kelemen  <kelemeng@gnome.hu>
	
	* data/appearance.glade: This time really fix bug 470532 (gtk-delete
	stock id is marked for translation)

2007-08-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_thumbnail_in_treeview): don't leak the
	thumbnails

2007-08-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_in_treeview),
	(gtk_theme_thumbnail_cb), (metacity_theme_thumbnail_cb),
	(icon_theme_thumbnail_cb), (changed_on_disk_cb): always generate
	thumbnails asynchronously. Mixing synchronous and asynchronous